# learn-to-cloud-app

./: .dockerignore  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  API_TEST_IMPROVEMENTS.md  API_TEST_REVIEW.md  CONFIGURATION_UPDATES.md  CONTRIBUTING.md  FRONTEND_IMPROVEMENTS.md  LICENSE  PRE_COMMIT_GUIDE.md  PR_SUMMARY.md  README.md  SECURITY.md  azure-mcp-vs-cli-research.md  azure.yaml  build-out-notes.md  core-testing-plan.md  core-testing-research.md  docker-compose.yml  package-lock.json  prod-health-check-plan.md  prod-health-check-research.md  pyproject.toml  remaining-tests-plan.md  remaining-tests-research.md
api/: .coveragerc  .dockerignore  .env.example  .squawk.toml  ARCHITECTURE.md  Dockerfile  alembic.ini  cli.py  coverage.xml  entrypoint.sh  main.py  models.py  openapi.json  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  schemas.py  tailwind.config.js
api/alembic/: env.py  script.py.mako
api/alembic/versions/: 0001_baseline.py  0002_drop_activities.py  0003_drop_certificate_type.py  0004_analytics_snapshot_and_indexes.py  0005_submission_covering_indexes.py  0006_user_phase_progress.py  0007_submission_attempt_history.py  0008_add_validation_message.py  0009_add_cloud_provider.py  0010_step_progress_step_id_identity.py  0011_add_iac_token_submission_type.py  0012_remove_iac_token_add_pr_review.py  0013_drop_completed_steps_column.py  0014_drop_certificates_table.py  0015_add_ci_status_submission_type.py  0016_drop_redundant_indexes.py  0017_add_verification_jobs.py  0018_drop_analytics_snapshot.py  0019_enforce_not_null_columns.py  0020_add_result_submission_id_indexes.py  0021_decouple_verification_jobs_from_status.py  0022_drop_verification_job_legacy_columns.py  0023_rename_ci_status_submission_type.py  0024_db_cleanup_tier1.py  0025_add_curriculum_tables.py  0026_add_requirements_order.py  0027_step_progress_step_uuid.py  0028_step_progress_cleanup.py  0029_submissions_uuid_fk.py  0030_verification_jobs_uuid_fk.py  (+45 more)
api/core/: __init__.py  auth.py  azure_auth.py  cache.py  config.py  copilot_client.py  csrf.py  database.py  github_client.py  llm_client.py  logger.py  metrics.py  middleware.py  observability.py  ratelimit.py  redirects.py  telemetry.py  templates.py  wide_event.py
api/docker-build/: smoke-test.sh
api/docs/: ARCHITECTURE.md  docker-configuration.md  grading-concepts.md
api/rendering/: __init__.py  certificates.py  context.py  steps.py
api/repositories/: __init__.py  activity.py  activity_repository.py  analytics_repository.py  certificate.py  certificate_repository.py  grading_repository.py  metrics_repository.py  progress.py  progress_denormalized_repository.py  progress_repository.py  scenario_repository.py  submission.py  submission_repository.py  user.py  user_repository.py  utils.py  webhook.py  webhook_repository.py
api/routes/: __init__.py  activity.py  activity_routes.py  admin_routes.py  analytics_routes.py  auth_routes.py  certificates.py  certificates_routes.py  changelog_routes.py  checklist.py  clerk_routes.py  dashboard.py  dashboard_routes.py  github.py  github_routes.py  health.py  health_routes.py  htmx_routes.py  legacy_redirects.py  pages_routes.py  questions.py  questions_routes.py  reflections.py  steps.py  steps_routes.py  users.py  users_routes.py  webhooks.py  webhooks_routes.py
api/scripts/: aggregate_metrics.py  audit_analytics.py  check_migration_naming.py  create_tables.py  drop_is_profile_public.py  export_openapi.py  find_duplicate_github_usernames.py  fix_submission.py  generate_favicons.py  lint_migration_sql.py  list_tables.py  migrate.py  new_migration.py  profile_startup.py  query_duplicates.py  rebuild_user_phase_progress.py  reconcile_verification_backfill.py  recreate_database.py  regression_check_user_delete_cascade.py  reset_local_db.py  reset_local_submissions.py  run_migrations.py  seed_grading_concepts.py  seed_test_certificate.py  seed_trend_data.py  seed_user_activity.py  test_agent_framework.py  test_certificate.py  test_sidecar.py
api/services/: __init__.py  activity.py  activity_service.py  analytics_service.py  badges.py  badges_service.py  certificates.py  certificates_service.py  changelog_service.py  clerk.py  clerk_service.py  code_verification_service.py  content.py  content_service.py  copilot_verification_service.py  ctf.py  ctf_service.py  dashboard.py  dashboard_service.py  deployed_api_verification_service.py  devops_verification_service.py  github_hands_on_verification.py  github_hands_on_verification_service.py  hands_on_verification.py  hands_on_verification_service.py  iac_lab_service.py  journal_verification_service.py  llm.py  llm_service.py  llm_verification_base.py  metrics_service.py  networking_lab_service.py  phase_requirements_service.py  pr_verification_service.py  progress.py  progress_service.py  questions.py  questions_service.py  redirect_service.py  security_verification_service.py  (+13 more)
api/shared/: __init__.py  auth.py  badges.py  certificates.py  config.py  content.py  ctf.py  database.py  github.py  llm.py  models.py  ratelimit.py  schemas.py  streaks.py  telemetry.py
api/templates/: base.html
api/tests/: __init__.py  conftest.py  conftest_improved.py  factories.py  test_admin_unlocks.py  test_alembic_env.py  test_alembic_env_regression.py  test_badges.py  test_certificate_eligibility.py  test_certificates_svg_logo.py  test_ctf.py  test_database.py  test_integration.py  test_journal_api_response.py  test_legacy_phase_redirects.py  test_logger.py  test_main.py  test_migration_chain.py  test_observability.py  test_phase5_devops.py  test_pool_pre_ping.py  test_progress.py  test_progression_system.py  test_repositories.py  test_routes.py  test_routes_improved.py  test_run_migrations.py  test_services_dashboard.py  test_streaks.py  test_telemetry.py  test_verification_attempt_grants_migration.py  test_verification_backfill_migration.py  test_wide_event.py
apps/verification-functions/: .funcignore  function_app.py  host.json  local.settings.example.json  pyproject.toml  verification_agents.py
(+915 files in other folders)
