[project]
name = "learn-to-cloud-workspace"
version = "0.0.0"
description = "Workspace root for the Learn to Cloud Python projects (dev tooling and task definitions only)."
requires-python = ">=3.13,<3.14"
dependencies = []

[tool.uv]
# The root is a virtual workspace root: it organizes the members and holds
# shared dev tooling, but is not itself a buildable/installable package.
package = false

[tool.uv.workspace]
members = [
    "api",
    "apps/verification-functions",
    "packages/learn-to-cloud-shared",
]

[dependency-groups]
# Workspace-wide developer tooling. Task definitions live in [tool.poe.tasks]
# below and are the single source of truth for the quality-gate commands that
# CI, the devcontainer, and local development all run.
dev = [
    "poethepoet>=0.30",
    "prek>=0.4.5",
]

[tool.poe.tasks.static]
help = "Run all static checks (lint, format, type-check, migration SQL, file hygiene) via prek"
cmd = "prek run --all-files --show-diff-on-failure"

[tool.poe.tasks.test]
help = "Run the test suites (with coverage gates) and the verification-functions import smoke test"
shell = """
set -e
(cd api && uv run pytest tests/ --cov=learn_to_cloud --cov-report=term-missing)
(cd packages/learn-to-cloud-shared && uv run pytest tests/ --cov=learn_to_cloud_shared --cov-report=term-missing)
(cd apps/verification-functions && uv run python -c "import function_app")
"""

[tool.poe.tasks.check]
help = "Run the full quality gate: static checks then tests"
sequence = ["static", "test"]
