[project]
name = "learn-to-cloud-workspace"
version = "0.0.0"
description = "Workspace root for the Learn to Cloud Python projects (dev tooling and task definitions only)."
requires-python = ">=3.13,<3.14"
dependencies = []

[tool.uv]
# The root is a virtual workspace root: it organizes the members and holds
# shared dev tooling, but is not itself a buildable/installable package.
package = false

[tool.uv.workspace]
members = [
    "api",
    "apps/verification-functions",
    "packages/learn-to-cloud-shared",
]

[dependency-groups]
# Workspace-wide developer tooling. Task definitions live in [tool.poe.tasks]
# below and are the single source of truth for the quality-gate commands that
# CI, the devcontainer, and local development all run.
dev = [
    "poethepoet>=0.48.0",
    "prek>=0.4.8",
]

[tool.poe.tasks.static]
help = "Run all static checks (lint, format, type-check, migration SQL, file hygiene) via prek"
cmd = "prek run --all-files --show-diff-on-failure"

[tool.poe.tasks.test]
help = "Run the test suites (with coverage gates) and the verification-functions orchestration tests"
shell = """
set -e
(cd api && uv run pytest tests/ --cov=learn_to_cloud --cov-report=term-missing)
(cd packages/learn-to-cloud-shared && uv run pytest tests/ --cov=learn_to_cloud_shared --cov-report=term-missing)
(cd apps/verification-functions && uv run pytest tests/)
"""

[tool.poe.tasks.package-smoke]
help = "Build and validate the installed shared runtime package"
shell = """
set -euo pipefail
tmpdir=$(mktemp -d)
trap 'rm -rf "$tmpdir"' EXIT
uv build --package learn-to-cloud-shared --wheel --out-dir "$tmpdir"
wheel=$(find "$tmpdir" -maxdepth 1 -name '*.whl' -print -quit)
uv venv "$tmpdir/venv"
uv pip install --python "$tmpdir/venv/bin/python" "$wheel"
"$tmpdir/venv/bin/python" -m learn_to_cloud_shared.runtime_package_check
"""

[tool.poe.tasks.check]
help = "Run the full quality gate: static checks, package smoke, then tests"
sequence = ["static", "package-smoke", "test"]
