[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["core*", "routes*", "services*", "repositories*", "rendering*"]
exclude = ["tests*", "assets*", "scripts*"]

[project]
name = "learn-to-cloud-api"
version = "0.1.0"
description = "Learn to Cloud API - FastAPI backend for learning cloud computing"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "authlib>=1.6.11",
    "azure-identity>=1.25.2",
    "azure-monitor-opentelemetry>=1.8.6",
    "fastapi>=0.135.3,<1",
    "httpx>=0.28.1,<1",
    "itsdangerous>=2.1.0",
    "jinja2>=3.1.0",
    "markdown>=3.5.0",
    "opentelemetry-instrumentation-sqlalchemy==0.61b0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.11.2,<3",
    "pydantic-settings>=2.7.1",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.24",
    "slowapi>=0.1.9",
    "circuitbreaker>=2.0.0",
    "cachetools>=5.3.0",
    "sqlalchemy>=2.0.49,<3",
    "tenacity>=8.2.0,<9.1.5",
    "uvicorn[standard]>=0.44.0",
    "starlette>=1.0.0",
    "pyyaml>=6.0",
    "agent-framework-core>=1.0.0,<2",
    "agent-framework-openai>=1.0.0,<2",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
    "opentelemetry-instrumentation-httpx>=0.61b0",
]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "alembic/*",
    "scripts/*",
    "__pycache__/*",
    ".venv/*",
    "*.pyc",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "@abc.abstractmethod",
]
fail_under = 40

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "PLC0415"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLC0415"]
"alembic/**" = ["PLC0415"]

[tool.ty.environment]
# Use the current Python interpreter to resolve third-party imports
python-platform = "linux"

[tool.ty.rules]

[tool.uv]

[dependency-groups]
dev = [
    "faker>=40.13.0",
    "factory-boy>=3.3.0",
    "httpx>=0.28.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff==0.15.9",
    "ty==0.0.29",
]
