[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["function_app"]

[project]
name = "learn-to-cloud-verification-functions"
version = "0.1.0"
description = "Durable Functions host for Learn to Cloud verification jobs"
requires-python = ">=3.13,<3.14"
dependencies = [
    "azure-monitor-opentelemetry>=1.8.6",
    "azure-functions>=1.24.0",
    "azure-functions-durable>=1.3.0",
    "learn-to-cloud-shared",
]

[tool.uv.sources]
learn-to-cloud-shared = { path = "../../packages/learn-to-cloud-shared", editable = true }

[dependency-groups]
dev = [
    "ruff==0.15.12",
    "ty==0.0.34",
]
